--- a/Prevu.Drawings/Machines/STR_BatchReactor.xaml
+++ b/Prevu.Drawings/Machines/STR_BatchReactor.xaml
@@ -5,36 +5,36 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Prevu.Drawings.Machines"
              mc:Ignorable="d" Width="100" Height="100">
-  <Viewbox Stretch="Uniform">
-    <Canvas Name="svg81" Width="43" Height="89">
-			<Canvas.RenderTransform>
-				<TranslateTransform X="0" Y="0"/>
-			</Canvas.RenderTransform>
-			<Canvas Name="g16" >
-        <Rectangle  Canvas.Left="4" Canvas.Top="11" Width="35" Height="74" RadiusX="3" RadiusY="3" Name="rect2" Fill="Gray"/>
-        <Canvas Name="g6" Effect="{StaticResource MaterialDesignShadowDepth1}">
-          <Path  Name="path4" Fill="Gray">
-            <Path.Data>
-              <PathGeometry Figures="M15 13C15.5523 13 16 12.5523 16 12C16 11.4477 15.5523 11 15 11V13ZM29 11C28.4477 11 28 11.4477 28 12C28 12.5523 28.4477 13 29 13V11ZM38 14.9595V82.0405H40V14.9595H38ZM36 84H7V86H36V84ZM5 82.0405V14.9595H3V82.0405H5ZM7 84C5.88256 84 5 83.1099 5 82.0405H3C3 84.2401 4.80373 86 7 86V84ZM38 82.0405C38 83.1099 37.1174 84 36 84V86C38.1963 86 40 84.2401 40 82.0405H38ZM36 13C37.1174 13 38 13.8901 38 14.9595H40C40 12.7599 38.1963 11 36 11V13ZM7 11C4.80373 11 3 12.7599 3 14.9595H5C5 13.8901 5.88256 13 7 13V11ZM7 13H15V11H7V13ZM29 13H36V11H29V13Z" FillRule="NonZero"/>
-            </Path.Data>
-          </Path>
-        </Canvas>
-        <Canvas Name="g10" Effect="{StaticResource MaterialDesignShadowDepth1}">
-					<Path  Name="path8" Fill="#FF292929">
-            <Path.Data>
-              <PathGeometry Figures="M20 2C20 1.44771 20.4477 1 21 1V1C21.5523 1 22 1.44772 22 2V22.8534C22 23.2151 21.8047 23.5486 21.4893 23.7255V23.7255C21.1854 23.896 20.8146 23.896 20.5107 23.7255V23.7255C20.1953 23.5486 20 23.2151 20 22.8534L20 2Z" FillRule="NonZero"/>
-            </Path.Data>
-          </Path>
-        </Canvas>
-        <Canvas Name="g14" Effect="{StaticResource MaterialDesignShadowDepth1}">
-					<Path  Name="path12" Fill="#FF292929">
-            <Path.Data>
-              <PathGeometry Figures="M14.6492 18.7569C13.185 17.7859 11.2112 18.1832 10.2367 19.6449V19.6449C10.0796 19.8806 9.95462 20.1361 9.86506 20.4048L9.63246 21.1026C9.22192 22.3342 9.22192 23.6658 9.63246 24.8974L9.86502 25.5951C9.95461 25.8638 10.0796 26.1194 10.2368 26.3552V26.3552C11.2113 27.817 13.1851 28.2146 14.6496 27.2439L17.6853 25.232C19.6945 23.9004 22.3055 23.9004 24.3147 25.232L27.3504 27.2439C28.8149 28.2146 30.7887 27.817 31.7632 26.3552V26.3552C31.9204 26.1194 32.0454 25.8638 32.135 25.5951L32.3675 24.8974C32.7781 23.6658 32.7781 22.3342 32.3675 21.1026L32.1349 20.4048C32.0454 20.1361 31.9204 19.8806 31.7633 19.6449V19.6449C30.7888 18.1832 28.815 17.7859 27.3508 18.7569L24.3162 20.7695C22.3063 22.1024 19.6937 22.1024 17.6838 20.7695L14.6492 18.7569Z" FillRule="NonZero"/>
-            </Path.Data>
-          </Path>
-        </Canvas>
-      </Canvas>
-    </Canvas>
-  </Viewbox>
+	<Viewbox Stretch="Uniform">
+		<Canvas Name="svg74" Width="37" Height="76">
+			<Canvas.Resources>
+				<RectangleGeometry x:Key="clip0_25_24" Rect="0, 0, 37, 76"/>
+			</Canvas.Resources>
+			<Canvas Name="g16" Clip="{StaticResource clip0_25_24}">
+				<Rectangle Canvas.Left="1" Canvas.Top="10" Width="35" Height="65" RadiusX="3" RadiusY="3" Name="rect2" Fill="Gray"/>
+				<Canvas Name="g6" Effect="{StaticResource MaterialDesignShadowDepth1}">
+					<Path Name="path4" Fill="Gray">
+						<Path.Data>
+							<PathGeometry Figures="M12 12C12.5523 12 13 11.5523 13 11C13 10.4477 12.5523 10 12 10V12ZM26 10C25.4477 10 25 10.4477 25 11C25 11.5523 25.4477 12 26 12V10ZM35 13.5946V72.4054H37V13.5946H35ZM33 74H4V76H33V74ZM2 72.4054V13.5946H0V72.4054H2ZM4 74C2.75422 74 2 73.1547 2 72.4054H0C0 74.522 1.93207 76 4 76V74ZM35 72.4054C35 73.1547 34.2458 74 33 74V76C35.0679 76 37 74.522 37 72.4054H35ZM33 12C34.2458 12 35 12.8453 35 13.5946H37C37 11.478 35.0679 10 33 10V12ZM4 10C1.93207 10 0 11.478 0 13.5946H2C2 12.8453 2.75422 12 4 12V10ZM4 12H12V10H4V12ZM26 12H33V10H26V12Z" FillRule="NonZero"/>
+						</Path.Data>
+					</Path>
+				</Canvas>
+				<Canvas Name="g10" Effect="{StaticResource MaterialDesignShadowDepth1}">
+					<Path Name="path8" Fill="#FF292929">
+						<Path.Data>
+							<PathGeometry Figures="M17 1C17 0.447715 17.4477 0 18 0V0C18.5523 0 19 0.447715 19 1V21.8534C19 22.2151 18.8047 22.5486 18.4893 22.7255V22.7255C18.1854 22.896 17.8146 22.896 17.5107 22.7255V22.7255C17.1953 22.5486 17 22.2151 17 21.8534L17 1Z" FillRule="NonZero"/>
+						</Path.Data>
+					</Path>
+				</Canvas>
+				<Canvas Name="g14" Effect="{StaticResource MaterialDesignShadowDepth1}">
+					<Path Name="path12" Fill="#FF292929">
+						<Path.Data>
+							<PathGeometry Figures="M11.6492 17.7569C10.185 16.7859 8.21123 17.1832 7.23671 18.6449V18.6449C7.0796 18.8806 6.95462 19.1361 6.86506 19.4048L6.63246 20.1026C6.22192 21.3342 6.22192 22.6658 6.63246 23.8974L6.86502 24.5951C6.95461 24.8638 7.07962 25.1194 7.23677 25.3552V25.3552C8.21135 26.817 10.1851 27.2146 11.6496 26.2439L14.6853 24.232C16.6945 22.9004 19.3055 22.9004 21.3147 24.232L24.3504 26.2439C25.8149 27.2146 27.7887 26.817 28.7632 25.3552V25.3552C28.9204 25.1194 29.0454 24.8638 29.135 24.5951L29.3675 23.8974C29.7781 22.6658 29.7781 21.3342 29.3675 20.1026L29.1349 19.4048C29.0454 19.1361 28.9204 18.8806 28.7633 18.6449V18.6449C27.7888 17.1832 25.815 16.7859 24.3508 17.7569L21.3162 19.7695C19.3063 21.1024 16.6937 21.1024 14.6838 19.7695L11.6492 17.7569Z" FillRule="NonZero"/>
+						</Path.Data>
+					</Path>
+				</Canvas>
+			</Canvas>
+		</Canvas>
+	</Viewbox>
 
 </UserControl>
