--- a/Prevu.Synoptics.V2932_Infinya/SH.xaml
+++ b/Prevu.Synoptics.V2932_Infinya/SH.xaml
@@ -12,7 +12,7 @@
 						 mc:Ignorable="d"
              Height="840" Width="1520" d:Background="{DynamicResource MaterialDesignPaper}">
     <Grid>
-        <Labels:Pipe HorizontalAlignment="Left" Height="12" Margin="295,136,0,0" VerticalAlignment="Top" Width="66" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" StatusComponent="185-01-MA1">
+        <Labels:Pipe HorizontalAlignment="Left" Height="12" Margin="295,136,0,0" VerticalAlignment="Top" Width="66" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" StatusComponent="190-71-ECS1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -22,7 +22,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Height="12" Margin="786,204,0,0" VerticalAlignment="Top" Width="88" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" StatusComponent="190-01-MA1">
+        <Labels:Pipe HorizontalAlignment="Left" Height="12" Margin="786,204,0,0" VerticalAlignment="Top" Width="88" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" StatusComponent="190-71-ECS1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -32,7 +32,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Height="12" Margin="410,164,0,0" VerticalAlignment="Top" Width="425" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" StatusComponent="190-01-MA1">
+        <Labels:Pipe HorizontalAlignment="Left" Height="12" Margin="410,164,0,0" VerticalAlignment="Top" Width="425" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" StatusComponent="190-71-ECS1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -42,7 +42,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Height="12" Margin="926,399,0,0" VerticalAlignment="Top" Width="179" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" StatusComponent="192-01-MA1">
+        <Labels:Pipe HorizontalAlignment="Left" Height="12" Margin="926,399,0,0" VerticalAlignment="Top" Width="179" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" StatusComponent="190-01-MA1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -52,7 +52,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Height="12" Margin="1056,438,0,0" VerticalAlignment="Top" Width="88" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" StatusComponent="192-01-MA1">
+        <Labels:Pipe HorizontalAlignment="Left" Height="12" Margin="1056,438,0,0" VerticalAlignment="Top" Width="88" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" StatusComponent="190-01-MA1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -62,7 +62,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Height="10" Margin="1160,545,0,0" VerticalAlignment="Top" Width="110" RenderTransformOrigin="0.5,0.5" Color="ByProduct">
+        <Labels:Pipe HorizontalAlignment="Left" Height="10" Margin="1160,545,0,0" VerticalAlignment="Top" Width="110" RenderTransformOrigin="0.5,0.5" Color="ByProduct" StatusComponent="190-71-ECS2">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -72,7 +72,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Height="12" Margin="1251,489,0,0" VerticalAlignment="Top" Width="118" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" StatusComponent="192-01-MA1">
+        <Labels:Pipe HorizontalAlignment="Left" Height="12" Margin="1251,489,0,0" VerticalAlignment="Top" Width="118" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" StatusComponent="190-71-ECS2">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -82,7 +82,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Height="10" Margin="263,515,0,0" VerticalAlignment="Top" Width="120" RenderTransformOrigin="0.5,0.5" Color="Oil" StatusComponent="190-24-CV1">
+        <Labels:Pipe HorizontalAlignment="Left" Height="10" Margin="278,515,0,0" VerticalAlignment="Top" Width="120" RenderTransformOrigin="0.5,0.5" Color="Oil" StatusComponent="190-24-CV1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -92,7 +92,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Height="10" Margin="254,359,0,0" VerticalAlignment="Top" Width="138" RenderTransformOrigin="0.5,0.5" Color="Oil" StatusComponent="190-24-CV1">
+        <Labels:Pipe HorizontalAlignment="Left" Height="10" Margin="269,359,0,0" VerticalAlignment="Top" Width="138" RenderTransformOrigin="0.5,0.5" Color="Oil" StatusComponent="190-24-CV1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -102,7 +102,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Height="10" Margin="321,292,0,0" VerticalAlignment="Top" Width="379" RenderTransformOrigin="0.5,0.5" Color="Oil" StatusComponent="190-24-CV1">
+        <Labels:Pipe HorizontalAlignment="Left" Height="10" Margin="336,292,0,0" VerticalAlignment="Top" Width="379" RenderTransformOrigin="0.5,0.5" Color="Oil" StatusComponent="190-24-CV1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -112,7 +112,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Height="10" Margin="445,650,0,0" VerticalAlignment="Top" Width="111" RenderTransformOrigin="0.5,0.5" Color="Oil" StatusComponent="190-05-MA1">
+        <Labels:Pipe HorizontalAlignment="Left" Height="10" Margin="460,650,0,0" VerticalAlignment="Top" Width="111" RenderTransformOrigin="0.5,0.5" Color="Oil" StatusComponent="190-05-MA1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -134,17 +134,7 @@
         </Labels:Pipe>
         <Machines:NT_ConveyorBelt HorizontalAlignment="Left" Margin="225,160,0,0" VerticalAlignment="Top" Width="200"/>
         <Machines:GR_002 HorizontalAlignment="Left" Margin="625,227,0,0" VerticalAlignment="Top" Height="330" Width="330"/>
-        <Machines:MaterialInletOutlet HorizontalAlignment="Left" Margin="265,35,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Height="125" Width="125">
-            <Machines:MaterialInletOutlet.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:MaterialInletOutlet.RenderTransform>
-        </Machines:MaterialInletOutlet>
-        <Machines:CV_Valve HorizontalAlignment="Left" Margin="275,404,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.545,0.455" Height="95" Width="95">
+        <Machines:CV_Valve HorizontalAlignment="Left" Margin="290,404,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.545,0.455" Height="95" Width="95">
             <Machines:CV_Valve.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -154,7 +144,7 @@
                 </TransformGroup>
             </Machines:CV_Valve.RenderTransform>
         </Machines:CV_Valve>
-        <Border BorderThickness="1" HorizontalAlignment="Left" Height="169" Margin="195,570,0,0" VerticalAlignment="Top" Width="266" Background="Gray" CornerRadius="15,15,15,15"/>
+        <Border BorderThickness="1" HorizontalAlignment="Left" Height="169" Margin="210,570,0,0" VerticalAlignment="Top" Width="266" Background="Gray" CornerRadius="15,15,15,15"/>
         <Machines:EXC_HeatExchanger HorizontalAlignment="Left" Margin="546,618,0,0" VerticalAlignment="Top" Height="74" Width="74"/>
         <Machines:NT_ConveyorBelt HorizontalAlignment="Left" Margin="1075,485,0,0" VerticalAlignment="Top" Width="200"/>
         <Machines:MaterialInletOutlet HorizontalAlignment="Left" Margin="1325,433,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Height="124" Width="125">
@@ -185,21 +175,32 @@
         <Machines:External HorizontalAlignment="Left" Height="70" Margin="475,59,0,0" VerticalAlignment="Top" Width="76"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" Height="50" Margin="785,566,0,0" VerticalAlignment="Top" Width="90" ComponentName="190-02-MA1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" Margin="627,630,0,0" VerticalAlignment="Top" ComponentName="190-05-MA1"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" Margin="340,598,0,0" VerticalAlignment="Top" ComponentName="190-42-TT1"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" Margin="220,668,0,0" VerticalAlignment="Top" ComponentName="190-11-R1"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" Margin="220,598,0,0" VerticalAlignment="Top" ComponentName="190-03-MA1"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" Margin="202,420,0,0" VerticalAlignment="Top" ComponentName="190-24-CV1"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" Margin="513,380,0,0" VerticalAlignment="Top" ComponentName="190-21-CV1"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" Margin="103,420,0,0" VerticalAlignment="Top" ComponentName="190-22-CV1"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" Margin="103,481,0,0" VerticalAlignment="Top" ComponentName="190-22-CV2"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" Margin="1110,303,0,0" VerticalAlignment="Top" ComponentName="190-71-ECS2"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" Height="50" Margin="865,118,0,0" VerticalAlignment="Top" Width="90" ComponentName="190-41-LT1"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" Height="50" Margin="1170,118,0,0" VerticalAlignment="Top" Width="90" ComponentName="190-SHREDDER"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" Margin="355,598,0,0" VerticalAlignment="Top" ComponentName="190-42-TT1"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" Margin="235,668,0,0" VerticalAlignment="Top" ComponentName="190-11-R1"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" Margin="235,598,0,0" VerticalAlignment="Top" ComponentName="190-03-MA1"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" Margin="217,424,0,0" VerticalAlignment="Top" ComponentName="190-24-CV1"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" Margin="521,380,0,0" VerticalAlignment="Top" ComponentName="190-21-CV1"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" Margin="118,424,0,0" VerticalAlignment="Top" ComponentName="190-22-CV1"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" Margin="118,485,0,0" VerticalAlignment="Top" ComponentName="190-22-CV2"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" Margin="1111,293,0,0" VerticalAlignment="Top" ComponentName="190-71-ECS2"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" Height="50" Margin="866,118,0,0" VerticalAlignment="Top" Width="90" ComponentName="190-41-LT1"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" Height="50" Margin="1110,126,0,0" VerticalAlignment="Top" Width="90" ComponentName="190-SHREDDER"/>
         <Rectangle HorizontalAlignment="Left" Height="110" Margin="1067,331,0,0" Stroke="Black" VerticalAlignment="Top" Width="2" StrokeThickness="2"/>
         <Machines:External HorizontalAlignment="Left" Height="70" Margin="1030,293,0,0" VerticalAlignment="Top" Width="76"/>
-        <TextBlock HorizontalAlignment="Left" Margin="10,498,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="88"
+        <TextBlock HorizontalAlignment="Left" Margin="25,498,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="88"
 							 Text="{lex:Loc Low Speed}" TextAlignment="Right" FontSize="12"/>
-        <TextBlock HorizontalAlignment="Left" Margin="10,437,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="88"
+        <TextBlock HorizontalAlignment="Left" Margin="25,437,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="88"
 							 Text="{lex:Loc High Speed}" TextAlignment="Right" FontSize="12"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" Height="50" Margin="899,293,0,0" VerticalAlignment="Top" Width="90" ComponentName="190-01-YA1"/>
+        <Machines:MaterialInletOutlet HorizontalAlignment="Left" Margin="266,36,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Height="125" Width="125">
+            <Machines:MaterialInletOutlet.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Machines:MaterialInletOutlet.RenderTransform>
+        </Machines:MaterialInletOutlet>
     </Grid>
 </UserControl>
