--- a/Prevu.Synoptics.V2502_Polymer_Processor/P680.xaml
+++ b/Prevu.Synoptics.V2502_Polymer_Processor/P680.xaml
@@ -19,7 +19,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="134" StatusComponent="670-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="855" Canvas.Top="601">
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="134" StatusComponent="670-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="855" Canvas.Top="601" Direction="DirectionOne">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -39,7 +39,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="136" StatusComponent="660-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="645" Canvas.Top="601">
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="136" StatusComponent="660-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="645" Canvas.Top="601" Direction="DirectionOne">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -49,7 +49,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="101" StatusComponent="670-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="808" Canvas.Top="647">
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="101" StatusComponent="670-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="808" Canvas.Top="647" Direction="DirectionOne">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -59,7 +59,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="99" StatusComponent="660-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="728" Canvas.Top="646">
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="99" StatusComponent="660-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="728" Canvas.Top="646" Direction="DirectionOne">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -159,7 +159,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="59" StatusComponent="659-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilityComponent="659-01-MA1" VisibilitySignal="CMD1" Canvas.Left="616" Canvas.Top="343">
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="59" StatusComponent="659-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilityComponent="" VisibilitySignal="" Canvas.Left="616" Canvas.Top="343" Direction="DirectionOne">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -169,7 +169,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="53" StatusComponent="659-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="966" Canvas.Top="343" VisibilitySignal="CMD2" VisibilityComponent="659-01-MA1">
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="53" StatusComponent="659-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="966" Canvas.Top="343" VisibilitySignal="" VisibilityComponent="" Direction="DirectionTwo">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
